@@ -1,6 +1,8 @@
 package com.smarthome.web.catalog;
 
+import com.smarthome.web.viewmodel.PatternParameter;
 import com.smarthome.web.viewmodel.PatternView;
+import java.util.Collections;
 import java.util.List;
 import org.springframework.stereotype.Component;
 
@@ -16,9 +18,8 @@ public class PatternCatalog {
                         "A single HomeController instance manages home mode and registered devices.",
                         "GET",
                         "/status",
-                        List.of(
-                                "com.smarthome.pattern.creational.singleton.HomeController"
-                        )
+                        List.of("com.smarthome.pattern.creational.singleton.HomeController"),
+                        Collections.emptyList()
                 ),
                 new PatternView(
                         "factory",
@@ -32,12 +33,12 @@ public class PatternCatalog {
                                 "com.smarthome.pattern.creational.factory.LightFactory",
                                 "com.smarthome.pattern.creational.factory.ThermostatFactory",
                                 "com.smarthome.pattern.creational.factory.CameraFactory",
-                                "com.smarthome.pattern.creational.factory.LockFactory",
-                                "com.smarthome.pattern.creational.factory.Device",
-                                "com.smarthome.pattern.creational.factory.SmartLight",
-                                "com.smarthome.pattern.creational.factory.SmartThermostat",
-                                "com.smarthome.pattern.creational.factory.SmartCamera",
-                                "com.smarthome.pattern.creational.factory.SmartLock"
+                                "com.smarthome.pattern.creational.factory.LockFactory"
+                        ),
+                        List.of(
+                                new PatternParameter("type", "Device Type", "select", List.of("LIGHT", "THERMOSTAT", "CAMERA", "LOCK"), "LIGHT"),
+                                new PatternParameter("name", "Device Name", "text", null, "New Device"),
+                                new PatternParameter("location", "Location", "text", null, "Living Room")
                         )
                 ),
                 new PatternView(
@@ -50,9 +51,11 @@ public class PatternCatalog {
                         List.of(
                                 "com.smarthome.pattern.creational.abstractfactory.SmartDeviceAbstractFactory",
                                 "com.smarthome.pattern.creational.abstractfactory.HomeKitFactory",
-                                "com.smarthome.pattern.creational.abstractfactory.SmartThingsFactory",
-                                "com.smarthome.pattern.creational.abstractfactory.HomeKitSensor",
-                                "com.smarthome.pattern.creational.abstractfactory.SmartThingsSensor"
+                                "com.smarthome.pattern.creational.abstractfactory.SmartThingsFactory"
+                        ),
+                        List.of(
+                                new PatternParameter("ecosystem", "Ecosystem", "select", List.of("SMARTTHINGS", "HOMEKIT"), "SMARTTHINGS"),
+                                new PatternParameter("location", "Location", "text", null, "Bedroom")
                         )
                 ),
                 new PatternView(
@@ -65,6 +68,12 @@ public class PatternCatalog {
                         List.of(
                                 "com.smarthome.pattern.creational.builder.AutomationRule",
                                 "com.smarthome.pattern.creational.builder.RuleContext"
+                        ),
+                        List.of(
+                                new PatternParameter("name", "Rule Name", "text", null, "Evening Lights"),
+                                new PatternParameter("trigger", "Trigger", "text", null, "motion detected"),
+                                new PatternParameter("condition", "Condition", "text", null, "time > 18:00"),
+                                new PatternParameter("action", "Action", "text", null, "turn lights on")
                         )
                 ),
                 new PatternView(
@@ -72,11 +81,15 @@ public class PatternCatalog {
                         "Prototype",
                         "Creational",
                         "Clone configuration presets via DeviceConfiguration prototypes.",
-                        "GET",
-                        "/patterns/prototype/templates",
+                        "POST",
+                        "/patterns/prototype/clone",
                         List.of(
                                 "com.smarthome.pattern.creational.prototype.DeviceConfiguration",
                                 "com.smarthome.pattern.creational.prototype.ConfigurationPrototypeRegistry"
+                        ),
+                        List.of(
+                                new PatternParameter("template", "Template to Clone", "select", List.of("bright-light", "dim-light", "comfort-thermostat", "security-camera"), "bright-light"),
+                                new PatternParameter("newName", "New Configuration Name", "text", null, "My Custom Config")
                         )
                 ),
                 new PatternView(
@@ -89,6 +102,10 @@ public class PatternCatalog {
                         List.of(
                                 "com.smarthome.pattern.structural.adapter.LegacyThermostat",
                                 "com.smarthome.pattern.structural.adapter.LegacyThermostatAdapter"
+                        ),
+                        List.of(
+                                new PatternParameter("name", "Device Name", "text", null, "Old Thermostat"),
+                                new PatternParameter("location", "Location", "text", null, "Basement")
                         )
                 ),
                 new PatternView(
@@ -102,10 +119,10 @@ public class PatternCatalog {
                                 "com.smarthome.pattern.structural.bridge.RemoteControl",
                                 "com.smarthome.pattern.structural.bridge.BasicRemote",
                                 "com.smarthome.pattern.structural.bridge.AdvancedRemote",
-                                "com.smarthome.pattern.structural.bridge.DeviceImplementor",
                                 "com.smarthome.pattern.structural.bridge.TVDevice",
                                 "com.smarthome.pattern.structural.bridge.RadioDevice"
-                        )
+                        ),
+                        Collections.emptyList()
                 ),
                 new PatternView(
                         "composite",
@@ -118,7 +135,8 @@ public class PatternCatalog {
                                 "com.smarthome.pattern.structural.composite.DeviceComponent",
                                 "com.smarthome.pattern.structural.composite.DeviceGroup",
                                 "com.smarthome.pattern.structural.composite.SingleDevice"
-                        )
+                        ),
+                        Collections.emptyList()
                 ),
                 new PatternView(
                         "decorator",
@@ -132,6 +150,10 @@ public class PatternCatalog {
                                 "com.smarthome.pattern.structural.decorator.LoggingDecorator",
                                 "com.smarthome.pattern.structural.decorator.SecurityDecorator",
                                 "com.smarthome.pattern.structural.decorator.CachingDecorator"
+                        ),
+                        List.of(
+                                new PatternParameter("deviceId", "Target Device ID", "text", null, "living-light-1"),
+                                new PatternParameter("decorators", "Decorators (comma-separated)", "text", null, "LOGGING,SECURITY")
                         )
                 ),
                 new PatternView(
@@ -140,9 +162,12 @@ public class PatternCatalog {
                         "Structural",
                         "SmartHomeFacade provides simple scene methods that coordinate subsystems.",
                         "POST",
-                        "/patterns/facade/scene/{name}",
+                        "/patterns/facade/scene/{sceneName}",
                         List.of(
                                 "com.smarthome.pattern.structural.facade.SmartHomeFacade"
+                        ),
+                        List.of(
+                                new PatternParameter("sceneName", "Scene Name", "select", List.of("morning", "night", "leave", "arrive", "movie", "party", "panic"), "movie")
                         )
                 ),
                 new PatternView(
@@ -154,9 +179,9 @@ public class PatternCatalog {
                         "/patterns/flyweight/demo",
                         List.of(
                                 "com.smarthome.pattern.structural.flyweight.DeviceType",
-                                "com.smarthome.pattern.structural.flyweight.DeviceTypeFactory",
-                                "com.smarthome.pattern.structural.flyweight.DeviceInstance"
-                        )
+                                "com.smarthome.pattern.structural.flyweight.DeviceTypeFactory"
+                        ),
+                        Collections.emptyList()
                 ),
                 new PatternView(
                         "proxy",
@@ -167,8 +192,11 @@ public class PatternCatalog {
                         "/patterns/proxy/remote",
                         List.of(
                                 "com.smarthome.pattern.structural.proxy.DeviceProxy",
-                                "com.smarthome.pattern.structural.proxy.RemoteDevice",
-                                "com.smarthome.pattern.structural.proxy.RealRemoteDevice"
+                                "com.smarthome.pattern.structural.proxy.RemoteDevice"
+                        ),
+                        List.of(
+                                new PatternParameter("name", "Device Name", "text", null, "Remote Camera"),
+                                new PatternParameter("address", "IP Address", "text", null, "192.168.1.50")
                         )
                 ),
                 new PatternView(
@@ -183,8 +211,12 @@ public class PatternCatalog {
                                 "com.smarthome.pattern.behavioral.chain.LoggingAlertHandler",
                                 "com.smarthome.pattern.behavioral.chain.NotificationAlertHandler",
                                 "com.smarthome.pattern.behavioral.chain.AlarmAlertHandler",
-                                "com.smarthome.pattern.behavioral.chain.EmergencyAlertHandler",
-                                "com.smarthome.pattern.behavioral.chain.AlertHandlerChain"
+                                "com.smarthome.pattern.behavioral.chain.EmergencyAlertHandler"
+                        ),
+                        List.of(
+                                new PatternParameter("deviceId", "Source Device ID", "text", null, "sensor-1"),
+                                new PatternParameter("level", "Alert Level", "select", List.of("INFO", "WARNING", "CRITICAL", "EMERGENCY"), "WARNING"),
+                                new PatternParameter("message", "Alert Message", "text", null, "Motion detected in restricted area")
                         )
                 ),
                 new PatternView(
@@ -197,11 +229,11 @@ public class PatternCatalog {
                         List.of(
                                 "com.smarthome.pattern.behavioral.command.Command",
                                 "com.smarthome.pattern.behavioral.command.TurnOnCommand",
-                                "com.smarthome.pattern.behavioral.command.TurnOffCommand",
-                                "com.smarthome.pattern.behavioral.command.SetBrightnessCommand",
-                                "com.smarthome.pattern.behavioral.command.SetTemperatureCommand",
-                                "com.smarthome.pattern.behavioral.command.MacroCommand",
                                 "com.smarthome.pattern.behavioral.command.CommandInvoker"
+                        ),
+                        List.of(
+                                new PatternParameter("deviceId", "Target Device ID", "text", null, "living-light-1"),
+                                new PatternParameter("command", "Command", "select", List.of("ON", "OFF"), "ON")
                         )
                 ),
                 new PatternView(
@@ -213,8 +245,12 @@ public class PatternCatalog {
                         "/patterns/interpreter/evaluate",
                         List.of(
                                 "com.smarthome.pattern.behavioral.interpreter.InterpreterContext",
-                                "com.smarthome.pattern.behavioral.interpreter.RuleInterpreter",
-                                "com.smarthome.pattern.behavioral.interpreter.AutomationRuleExpression"
+                                "com.smarthome.pattern.behavioral.interpreter.RuleInterpreter"
+                        ),
+                        List.of(
+                                new PatternParameter("rule", "Rule Expression", "text", null, "motion AND hour >= 18"),
+                                new PatternParameter("motion", "Context: motion (boolean)", "select", List.of("true", "false"), "true"),
+                                new PatternParameter("hour", "Context: hour (int)", "text", null, "20")
                         )
                 ),
                 new PatternView(
@@ -226,11 +262,11 @@ public class PatternCatalog {
                         "/patterns/iterator/demo",
                         List.of(
                                 "com.smarthome.pattern.behavioral.iterator.DeviceIterator",
-                                "com.smarthome.pattern.behavioral.iterator.SmartHomeDeviceCollection",
-                                "com.smarthome.pattern.behavioral.iterator.AllDevicesIterator",
-                                "com.smarthome.pattern.behavioral.iterator.RoomFilterIterator",
-                                "com.smarthome.pattern.behavioral.iterator.TypeFilterIterator",
-                                "com.smarthome.pattern.behavioral.iterator.StatusFilterIterator"
+                                "com.smarthome.pattern.behavioral.iterator.SmartHomeDeviceCollection"
+                        ),
+                        List.of(
+                                new PatternParameter("filterType", "Filter Type", "select", List.of("ALL", "ROOM", "TYPE", "STATUS"), "ROOM"),
+                                new PatternParameter("filterValue", "Filter Value", "text", null, "Living Room")
                         )
                 ),
                 new PatternView(
@@ -242,11 +278,9 @@ public class PatternCatalog {
                         "/patterns/mediator/demo",
                         List.of(
                                 "com.smarthome.pattern.behavioral.mediator.SmartHomeMediator",
-                                "com.smarthome.pattern.behavioral.mediator.CentralHubMediator",
-                                "com.smarthome.pattern.behavioral.mediator.SmartLightColleague",
-                                "com.smarthome.pattern.behavioral.mediator.CameraColleague",
-                                "com.smarthome.pattern.behavioral.mediator.MotionSensorColleague"
-                        )
+                                "com.smarthome.pattern.behavioral.mediator.CentralHubMediator"
+                        ),
+                        Collections.emptyList()
                 ),
                 new PatternView(
                         "memento",
@@ -257,9 +291,10 @@ public class PatternCatalog {
                         "/patterns/memento/save",
                         List.of(
                                 "com.smarthome.pattern.behavioral.memento.DeviceStateMemento",
-                                "com.smarthome.pattern.behavioral.memento.SceneManager",
-                                "com.smarthome.pattern.behavioral.memento.SceneDevice",
-                                "com.smarthome.pattern.behavioral.memento.DeviceSnapshot"
+                                "com.smarthome.pattern.behavioral.memento.SceneManager"
+                        ),
+                        List.of(
+                                new PatternParameter("sceneName", "Snapshot Name", "text", null, "My Snapshot")
                         )
                 ),
                 new PatternView(
@@ -271,11 +306,11 @@ public class PatternCatalog {
                         "/patterns/observer/register",
                         List.of(
                                 "com.smarthome.pattern.behavioral.observer.DeviceObserver",
-                                "com.smarthome.pattern.behavioral.observer.ObservableDevice",
-                                "com.smarthome.pattern.behavioral.observer.MobileAppObserver",
-                                "com.smarthome.pattern.behavioral.observer.DashboardObserver",
-                                "com.smarthome.pattern.behavioral.observer.AnalyticsObserver",
-                                "com.smarthome.pattern.behavioral.observer.EmailObserver"
+                                "com.smarthome.pattern.behavioral.observer.ObservableDevice"
+                        ),
+                        List.of(
+                                new PatternParameter("deviceId", "Device ID to Observe", "text", null, "living-thermostat"),
+                                new PatternParameter("observerType", "Observer Type", "text", null, "MobileApp")
                         )
                 ),
                 new PatternView(
@@ -287,12 +322,9 @@ public class PatternCatalog {
                         "/patterns/state/demo",
                         List.of(
                                 "com.smarthome.pattern.behavioral.state.DeviceState",
-                                "com.smarthome.pattern.behavioral.state.StatefulDevice",
-                                "com.smarthome.pattern.behavioral.state.OffState",
-                                "com.smarthome.pattern.behavioral.state.OnState",
-                                "com.smarthome.pattern.behavioral.state.StandbyState",
-                                "com.smarthome.pattern.behavioral.state.ErrorState"
-                        )
+                                "com.smarthome.pattern.behavioral.state.StatefulDevice"
+                        ),
+                        Collections.emptyList()
                 ),
                 new PatternView(
                         "strategy",
@@ -303,12 +335,10 @@ public class PatternCatalog {
                         "/patterns/strategy/apply",
                         List.of(
                                 "com.smarthome.pattern.behavioral.strategy.EnergyStrategy",
-                                "com.smarthome.pattern.behavioral.strategy.EnergyManager",
-                                "com.smarthome.pattern.behavioral.strategy.EcoModeStrategy",
-                                "com.smarthome.pattern.behavioral.strategy.ComfortModeStrategy",
-                                "com.smarthome.pattern.behavioral.strategy.AwayModeStrategy",
-                                "com.smarthome.pattern.behavioral.strategy.PartyModeStrategy",
-                                "com.smarthome.pattern.behavioral.strategy.NightModeStrategy"
+                                "com.smarthome.pattern.behavioral.strategy.EnergyManager"
+                        ),
+                        List.of(
+                                new PatternParameter("strategy", "Strategy", "select", List.of("ECO", "COMFORT", "AWAY", "PARTY", "NIGHT"), "ECO")
                         )
                 ),
                 new PatternView(
@@ -320,9 +350,10 @@ public class PatternCatalog {
                         "/patterns/template/demo",
                         List.of(
                                 "com.smarthome.pattern.behavioral.templatemethod.DeviceInitializer",
-                                "com.smarthome.pattern.behavioral.templatemethod.LightInitializer",
-                                "com.smarthome.pattern.behavioral.templatemethod.ThermostatInitializer",
-                                "com.smarthome.pattern.behavioral.templatemethod.CameraInitializer"
+                                "com.smarthome.pattern.behavioral.templatemethod.LightInitializer"
+                        ),
+                        List.of(
+                                new PatternParameter("deviceType", "Device Type", "select", List.of("LIGHT", "THERMOSTAT", "CAMERA", "LOCK"), "LIGHT")
                         )
                 ),
                 new PatternView(
@@ -334,13 +365,10 @@ public class PatternCatalog {
                         "/patterns/visitor/audit",
                         List.of(
                                 "com.smarthome.pattern.behavioral.visitor.DeviceVisitor",
-                                "com.smarthome.pattern.behavioral.visitor.VisitableLight",
-                                "com.smarthome.pattern.behavioral.visitor.VisitableThermostat",
-                                "com.smarthome.pattern.behavioral.visitor.VisitableCamera",
-                                "com.smarthome.pattern.behavioral.visitor.VisitableLock",
-                                "com.smarthome.pattern.behavioral.visitor.MaintenanceVisitor",
-                                "com.smarthome.pattern.behavioral.visitor.EnergyAuditVisitor",
-                                "com.smarthome.pattern.behavioral.visitor.SecurityAuditVisitor"
+                                "com.smarthome.pattern.behavioral.visitor.MaintenanceVisitor"
+                        ),
+                        List.of(
+                                new PatternParameter("type", "Audit Type", "select", List.of("MAINTENANCE", "ENERGY", "SECURITY"), "MAINTENANCE")
                         )
                 )
         );
